# SAT-Athena

./: .gitignore  .npmrc  CLAUDE.md  Dockerfile  Makefile  docker-compose.studio.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  render.yaml  tsconfig.json  vitest.config.ts
agents/: .env.example  Dockerfile  README.md  eval_math_shim.py  main.py  pyproject.toml
agents/app/educator/: router.py
agents/app/pre_generation/: content_workflow.py  generate_content.py  lesson_generator.py  problem_generator.py  pulse_check_grafter.py  seed_lesson_images.py  subtopic_generator.py  topic_generator.py
agents/app/reports/: report_pdf_agent.py
agents/app/run_time/dynamic/: lesson_plan_classifier.py  my_learning_generator.py  my_learning_lesson_agent.py  my_learning_quiz_tutor_agent.py
agents/app/run_time/sat/: flashcard_agent.py  infographic_agent.py  mentor_agent.py  micro_lesson_agent.py  podcast_agent.py  quiz_tutor_agent.py  stream_once.py  tutoring_agent.py  whiteboard_agent.py  why_this_matters_agent.py
agents/app/studio/: archetypes.py  events.py  executor.py  models.py  pov_agent.py  prompt_resolver.py  report_agent.py  router.py  triage.py
agents/app/studio/skills/: __init__.py  quiz.py  registry.py
agents/app/utils/: README.md  db.py  lesson_images.py  llm_client.py  secrets.py
agents/cli/: main.py
agents/prompts/micro_lesson/: NARRATION_LEAK_FIX_NOTES.md  SECTION_HEADINGS_NOTES.md  baseline.md  c1-reordered.md  c2-ir.md  c2.md
agents/scripts/: majordomo_create_bucket.py  seed_studio_agents.py
agents/tests/: test_math_equiv.py  test_mentor_solve.py  test_models.py  test_prompt_resolver.py  test_router.py
agents/video_intro/: README.md  __main__.py  brief_generator.py  config.py  patchers.py  primitive_generator.py  sanity_render.py  visual_critique.py
agents/video_intro/adapters/: tts.py
agents/video_intro/briefs/: basketball_demo.json  linear_eq_two_var_wrapup.json
docs/: educator-email-setup.md
scripts/: apply-content-tables.mjs  apply-content-tables.sql  check-content-tables.mjs  (+7 more)
(+517 files in other folders)
